Added photos commit

--- a/collection.html
+++ b/collection.html
@@ -13,12 +13,14 @@
     <div class="content">
         <!--           <h3>What is Lorem Ipsum?</h3> -->
                     <h3 href="url">How is toxic waste collected and stored to prevent leaks or spills?</h3>
-                    <img src="/Users/karankumar/uni/Semester 4/Waste Management/Website/1/collection.jpg" alt="" style=" height: 350px;">
+                    <img src="collection.jpg" alt="" style=" height: 350px;">
                     <p>Toxic waste is a hazardous substance that can cause serious harm to humans, animals, and the environment if not handled and stored properly. The collection and storage of toxic waste involves a variety of safety measures to prevent leaks or spills, which can be disastrous for the environment and the health of living organisms.</p>
 
                     <!-- <p class="important">Chemical manufacturing:</p> -->
                     <p> One of the most important aspects of collecting and storing toxic waste is using appropriate storage containers. These containers are specially designed to withstand the corrosive and hazardous nature of the waste they hold. Common types of containers include drums, intermediate bulk containers (IBCs), and tanks made of materials such as steel, plastic, or fiberglass. The size and type of container used will depend on the specific type of waste being stored, as well as the quantity and duration of storage required.</p>
+                    <img src="collection2.jpg" alt="" style=" height: 350px;">
                     <p></p>
+                    
                     <!-- <p class="important">Metal processing:</p>  -->
                     <!-- <img src="/Users/karankumar/uni/Semester 4/Waste Management/Website/1/metal.jpg" alt="" style=" height: 350px;"> -->
                     <p>Secondary containment systems are also critical for preventing leaks and spills of toxic waste. Secondary containment includes spill berms, containment pallets, or sumps that can hold any spilled waste and prevent it from reaching the environment. The type and size of secondary containment used will depend on the amount and type of toxic waste being stored, as well as the location and environmental conditions of the storage area.</p>
@@ -26,6 +28,7 @@
                     <!-- <p class="important">Oil and gas drilling:</p> -->
                     <!-- <img src="/Users/karankumar/uni/Semester 4/Waste Management/Website/1/oil.jpg" alt="" style=" height: 350px;"> -->
                     <p>Proper labeling and signage are also essential for the safe collection and storage of toxic waste. The labeling must include information on the contents of the container, the hazards associated with the waste, and any emergency procedures that should be followed in the event of a leak or spill. Additionally, clear and visible signage should be used to identify the storage area and any potential hazards associated with the waste.</p>
+                    <img src="collection3.jpg" alt="" style=" height: 350px;">
                     <p></p>
                     <!-- <p class="important">Coal-fired power plants:</p> -->
                     <!-- <img src="/Users/karankumar/uni/Semester 4/Waste Management/Website/1/coal.jpeg" alt="" style=" height: 350px;"> -->
