--- a/disposal.html
+++ b/disposal.html
@@ -18,11 +18,18 @@
         <p>The disposal of toxic waste is an important aspect of managing hazardous materials. There are several methods of disposal that can be used to safely manage toxic waste, including:</p>
 <ul>
   <li><strong>Secure landfilling:</strong> Secure landfilling involves the placement of hazardous waste in specially designed facilities that are designed to prevent the release of toxic materials into the environment. Secure landfills are lined with multiple layers of protective material to prevent contamination of the soil and groundwater.</li>
+  <img src="disposal1.jpg" alt="" style=" height: 350px;">
   <li><strong>Incineration:</strong> Incineration involves the controlled burning of hazardous waste at high temperatures, which can effectively destroy hazardous materials. Incineration is often used to treat organic waste materials, such as solvents, oils, and pesticides.</li>
+  <img src="disposal3.jpeg" alt="" style=" height: 350px;">
   <li><strong>Deep-well injection:</strong> Deep-well injection involves the injection of hazardous waste into deep underground wells that are specifically designed for this purpose. This method is used for waste that cannot be safely disposed of in landfills or incinerated.</li>
+  <img src="disposal3.jpeg" alt="" style=" height: 350px;">
+
   <li><strong>Recycling:</strong> Recycling involves the reuse of materials that have been treated to remove or reduce hazardous components. This method can be used for a wide range of materials, including batteries, electronics, and other industrial products.</li>
+  
   <li><strong>Bioremediation:</strong> Bioremediation involves the use of microorganisms to break down hazardous waste materials, such as oil spills or contaminated soil. This method can be used to remediate contaminated sites and reduce the impact of hazardous materials on the environment.</li>
+  
   <li><strong>Chemical treatment:</strong> Chemical treatment involves the use of chemicals to break down or neutralize hazardous waste materials. This method can be used to treat materials that cannot be safely disposed of in landfills or incinerated.</li>
+  
   <li><strong>Stabilization and solidification:</strong> Stabilization and solidification involves the addition of materials, such as cement or lime, to hazardous waste materials to make them less mobile and less harmful. This method can be used to treat waste that cannot be safely disposed of in landfills or incinerated.</li>
 </ul>
 <p>Overall, the method used to dispose of toxic waste depends on the type and characteristics of the waste, as well as the desired outcome. Some methods may be more suitable for certain types of waste than others. It is important to dispose of hazardous waste properly to prevent contamination of the environment and protect public health.</p>
