--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ https://templatemo.com/tm-586-scholar
     </div>
   </div> 
 
-  <div class="section testimonials">
+  <!-- <div class="section testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
@@ -585,7 +585,7 @@ https://templatemo.com/tm-586-scholar
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="section events" id="events">
     <div class="container">
