--- a/treatment.html
+++ b/treatment.html
@@ -16,11 +16,19 @@
         <p>Toxic waste treatment involves a series of processes that are designed to reduce or eliminate the harmful effects of hazardous materials on human health and the environment. Some of the most commonly used methods to treat toxic waste include:</p>
 <ul>
   <li><strong>Incineration:</strong> Incineration is a process that involves the controlled burning of waste materials at very high temperatures. This process is often used to treat organic waste materials, such as solvents, oils, and pesticides. Incineration can destroy toxic compounds and reduce waste volume.</li>
+  <img src="treatment1.jpg" alt="" style=" height: 350px;">
   <li><strong>Landfilling:</strong> Landfilling is a process that involves burying waste materials in designated areas. Landfills are engineered with multiple layers of lining material to prevent leakage and contamination of soil and groundwater. Toxic waste that is not suitable for incineration can be safely disposed of in secure landfills.</li>
+  <img src="treatment4.jpg" alt="" style=" height: 350px;">
   <li><strong>Physical treatment:</strong> Physical treatment methods involve the use of physical processes to treat hazardous waste. For example, physical treatment methods may include filtering, sedimentation, and centrifugation. These processes can be used to separate out contaminants from water or other liquid waste streams.</li>
+  
   <li><strong>Chemical treatment:</strong> Chemical treatment methods involve the use of chemical processes to treat hazardous waste. For example, chemical treatment methods may include oxidation, reduction, precipitation, and neutralization. These processes can be used to break down or neutralize toxic compounds.</li>
+  <img src="treatment3.jpeg" alt="" style=" height: 350px;">
+
   <li><strong>Biological treatment:</strong> Biological treatment methods involve the use of living organisms, such as bacteria or fungi, to treat hazardous waste. For example, bioremediation is a process that involves the use of microorganisms to break down organic compounds in soil or water.</li>
+  <img src="treatment2.jpeg" alt="" style=" height: 350px;">
+
   <li><strong>Stabilization and solidification:</strong> Stabilization and solidification involve the addition of materials, such as lime or cement, to hazardous waste to reduce its mobility and make it less harmful. This process can be used to treat waste materials that cannot be safely incinerated or disposed of in landfills.</li>
+  
   <li><strong>Thermal desorption:</strong> Thermal desorption is a process that involves heating contaminated soil or other waste materials to remove contaminants. This process can be used to treat waste materials that are contaminated with volatile organic compounds.</li>
 </ul>
 <p>Overall, the method used to treat toxic waste depends on the type and characteristics of the waste, as well as the desired outcome. Some methods may be more suitable for certain types of waste than others. Effective treatment of toxic waste is crucial to protect the environment and public health.</p>
